# assimp

./: .gitignore  CMakeLists.txt  README.md
installed/VS2017/x64/lib/cmake/assimp-5.0/: assimpTargets-debug.cmake  assimpTargets-release.cmake
installed/VS2017/x86/lib/: IrrXML.lib  zlibstaticd.lib
installed/VS2017/x86/lib/cmake/assimp-5.0/: assimpTargets-debug.cmake  assimpTargets-release.cmake
installed/VS2017/x86/lib/pkgconfig/: assimp.pc
installed/VS2019/x64/lib/: IrrXML.lib
installed/VS2019/x86/lib/: IrrXML.lib  zlibstaticd.lib
installed/VS2022/x64/lib/cmake/assimp-5.4/: assimpTargets-debug.cmake
installed/VS2022/x86/lib/cmake/assimp-5.0/: assimpTargets-debug.cmake
lib/: IrrXML.lib  zlibstaticd.lib
lib/cmake/assimp-5.0/: assimpTargets-debug.cmake  assimpTargets-release.cmake
lib/pkgconfig/: assimp.pc
module/: assimp-build.cmake  assimp-prebuilt.cmake
prebuilt/msvc2017/x64/lib/cmake/assimp-5.0/: assimpTargets-release.cmake
prebuilt/msvc2017/x64/lib/pkgconfig/: assimp.pc
prebuilt/msvc2017/x86/lib/: IrrXML.lib
prebuilt/msvc2017/x86/lib/cmake/assimp-5.0/: assimpTargets-debug.cmake
prebuilt/msvc2019/x64/lib/cmake/assimp-5.0/: assimpTargets-release.cmake
prebuilt/msvc2019/x86/lib/cmake/assimp-5.0/: assimpTargets-debug.cmake  assimpTargets-release.cmake
prebuilt/msvc2019/x86/lib/pkgconfig/: assimp.pc
prebuilt/msvc2022/x64/lib/cmake/assimp-5.0/: assimpTargets-debug.cmake  assimpTargets-release.cmake
prebuilt/msvc2022/x86/lib/: zlibstaticd.lib
